--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe2d6319d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8346d96710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2d68c60d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2d68c62d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8346d57350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8346d57550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2d6e729d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2d6e72bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f83472f8c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f83472f8e10&gt;]</pre>
 </div>
 
 </div>
