--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6b9d3b090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fccaf95d310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6ba021210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6ba021410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fccaf928150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fccaf928350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6ba5c4a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd6ba5c4c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fccafed5a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fccafed5c90&gt;]</pre>
 </div>
 
 </div>
