--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f18489d7690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6cd9f1c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1848cc0d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1848cc42d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6cdceb110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6cdceb310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1849257490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1849262b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6ce297a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6ce297c10&gt;]</pre>
 </div>
 
 </div>
