--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c5e628e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3a0c8ca90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c5ebe2110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c5ebe2310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3a1247050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3a1247250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c5f190b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c5f190d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3a17e3910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3a17e3b10&gt;]</pre>
 </div>
 
 </div>
