--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4441117a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f933b9894d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44413eb050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44413eb1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f933bc4df10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f933bc7d190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4441996a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4441996b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f933c21a910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f933c21ab50&gt;]</pre>
 </div>
 
 </div>
