--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda71fbcfd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4eba38f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda72583110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda72583310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4eb706250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4eb706450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda72b6ac50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda72b1ec10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4ebcbab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4ebcbad90&gt;]</pre>
 </div>
 
 </div>
