--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f187717db50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53c09b0950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1876e550d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1876e552d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53c06931d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53c06933d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f18774069d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1877406bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53c0c41b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53c0c41d90&gt;]</pre>
 </div>
 
 </div>
