--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53c09b0950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7db0411710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53c06931d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53c06933d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7db070f190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7db070f390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53c0c41b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53c0c41d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7db0cb3a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7db0cb3c90&gt;]</pre>
 </div>
 
 </div>
