--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe77255b250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f62970cb3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe77284b150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe77284b350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f62973d4110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f62973d4310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe772df9a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe772df9c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6297972990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6297972b90&gt;]</pre>
 </div>
 
 </div>
