--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fadd014abd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6174276350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fadcfe1d110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fadcfe1d310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6173f28f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6173f5b1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fadd03cda50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fadd03cdc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61744f9910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61744f9b10&gt;]</pre>
 </div>
 
 </div>
