--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ced336910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84755edc90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ced912290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ced912490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84752b7090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84752b7290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4cedec2b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4cedec2d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8475863950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8475863b50&gt;]</pre>
 </div>
 
 </div>
