--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe118be8f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5095d57bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe118c39210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe118c39410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f509607d510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5095d132d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1191edad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1191edcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5095cffb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50962c0bd0&gt;]</pre>
 </div>
 
 </div>
