--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4b6e33cc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b23a0e5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4b6e6291d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4b6e6293d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b239de150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b239de350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4b6ebd7a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4b6ebd7c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b23f78a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b23f78c10&gt;]</pre>
 </div>
 
 </div>
