--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe63b964c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4ed60f890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe63b8fefd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe63b925210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4edbbe1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4edbbe3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe63bec2990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe63bec2b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4ee16fb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4ee16fd50&gt;]</pre>
 </div>
 
 </div>
