--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97ea888450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f37bf9410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97eab6d690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97eab6b350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f31dc8150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f31dc8350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97eb185f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97eb11ebd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f32362a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f32362c90&gt;]</pre>
 </div>
 
 </div>
