--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f66c3d2e5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2ebb5068d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66c39fd090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66c39fd290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eba980dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2eba623390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66c3fac990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66c3facb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ebac25bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2ebabd6c50&gt;]</pre>
 </div>
 
 </div>
