--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f867c723350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8764871990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f867ca19bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f867ca08510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8764537f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87645531d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f867cfaf850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f867cfbbd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8764b35690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8764affad0&gt;]</pre>
 </div>
 
 </div>
