--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1302786090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f772d8f7990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f13027b5a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1302454310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f772dbf3110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f772dbf3350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1302a4fb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1302a00bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f772e18f9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f772e18fc10&gt;]</pre>
 </div>
 
 </div>
