--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8b1dd0a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7018a493d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8b1e1f150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8b1e1f350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f701900e290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f701900e490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8b23caad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8b23cacd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70195afc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70195f84d0&gt;]</pre>
 </div>
 
 </div>
