--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdd4742450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6772397590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdd4d06190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdd4d06390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f677266f2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f677266f4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdd52e4d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdd52a9cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6772c1dc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6772c1de10&gt;]</pre>
 </div>
 
 </div>
