--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6772397590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7972ff99d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f677266f2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f677266f4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79732dc090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79732dc290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6772c1dc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6772c1de10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f797387a9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f797387abd0&gt;]</pre>
 </div>
 
 </div>
