--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4f618baf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb923c654d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f61b9a2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f61b9a4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb923f38fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb923f66210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f62149ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f62149cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9244f0610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb9244fcb10&gt;]</pre>
 </div>
 
 </div>
