--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb923c654d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc8e07639d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb923f38fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb923f66210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8e0a3d210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc8e0a3d410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9244f0610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb9244fcb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8e0ff1a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc8e0ff1c90&gt;]</pre>
 </div>
 
 </div>
