--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f781764e610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6991d5e910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7817c02250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7817c02450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6990e85990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6990ea7390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f78181b5c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f78181b5e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6991449710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6991453c50&gt;]</pre>
 </div>
 
 </div>
