--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe808711c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff5bc859390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8083f4350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe8083f4550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff59323b050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff59323b250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe808993c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe808993e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5937d8950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5937d8b50&gt;]</pre>
 </div>
 
 </div>
