--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1ae5ec950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8ab6e4950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1adf4af90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1adf651d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8ab69b0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8ab69b2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1ae517950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1ae517b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8abc46a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8abc46c10&gt;]</pre>
 </div>
 
 </div>
