--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f928d072210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0accd968d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9286b20ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9286b52110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0acca4f250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0acca68510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92870f1810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92870f1a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0acd00eb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0acd018e50&gt;]</pre>
 </div>
 
 </div>
