--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3755913a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71d5936b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3755bf9d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3755be83d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71d5906090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71d5906290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f375618f610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3756199c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71d5ea49d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71d5ea4bd0&gt;]</pre>
 </div>
 
 </div>
