--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff7efde5bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34abebe1d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7efab4250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7efab4450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34abe6e450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34abe6e650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7f0063b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7f0063d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34ac413d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34ac413f50&gt;]</pre>
 </div>
 
 </div>
