--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f33f69e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8293349790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f33c3b250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f33c3b450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8293641190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8293641390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f341ebb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f341ebd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8293bdfb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8293bdfd10&gt;]</pre>
 </div>
 
 </div>
