--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff94eb99810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00b3a23710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff94eb53350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff94eb53590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00b3cf02d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00b3cf04d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff94f104c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff94f104e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00b42a2c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00b42a2e90&gt;]</pre>
 </div>
 
 </div>
