--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b8d1d5fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9e750c290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b8d5fc050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b8d5fc250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9e791e210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9e791e410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b8db98990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b8db98b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9e7ebca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9e7ebcc50&gt;]</pre>
 </div>
 
 </div>
