--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c878d8e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f407125de10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c8729b250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c8729b450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f407180c250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f407180c450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c87849b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c87849d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4071dbfb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4071dbfd10&gt;]</pre>
 </div>
 
 </div>
