--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c0669efd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f29088e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c06978250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c06978450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f2904f050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f2904f250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c06f2ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c06f2bc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f295eb950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f295ebb50&gt;]</pre>
 </div>
 
 </div>
