--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcecb212cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f66a366bb50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcecb228490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcecaee9410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66a3340310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66a3340510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcecb4daa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcecb48bcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66a38efc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66a38efe10&gt;]</pre>
 </div>
 
 </div>
