--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab7b5c4390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f769789c590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab7b27ef90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab7b29a1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7696a7df90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7696aa01d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab7b847a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab7b847c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f769704d890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f769704da90&gt;]</pre>
 </div>
 
 </div>
