--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4add66d790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f91d9fa6d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4add94d190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4add94d050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91d9ce72d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91d9ce74d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4addeeea50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4addeee850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91da296c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91da296e90&gt;]</pre>
 </div>
 
 </div>
