--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8920a68650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7cf7a9d750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8920756210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8920756410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cf777f050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7cf777f250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8920d07ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8920d07cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cf7d18950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7cf7d18b50&gt;]</pre>
 </div>
 
 </div>
