--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe309d5af10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf77e36ad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe309d25050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe309d25250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf76f46290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbf76f46490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe30a2d29d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe30a2d2bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf774fab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbf774fad50&gt;]</pre>
 </div>
 
 </div>
