--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3a18b7e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46b2d90910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3a159b0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3a159b2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46b2dd5050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46b2dd5250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3a1b39990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff3a1b39b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46b3372910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46b3372b10&gt;]</pre>
 </div>
 
 </div>
