--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd32e8a0bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42a0b6d810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd32e583110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd32e583310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42a0e60090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42a0e60290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd32eb1fa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd32eb1fc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42a13fca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42a13fcc50&gt;]</pre>
 </div>
 
 </div>
