--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdedafb1450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae76e77b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdedac88110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdedac88310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae76eb5ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae76eda110&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdedb225a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdedb225c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae76c036d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae77486a10&gt;]</pre>
 </div>
 
 </div>
