--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef6f09ae90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9bc3722710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef6ed72110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef6ed72310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bc33c9fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9bc33fc210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef6f30e990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef6f30eb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bc39d0dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9bc399aa50&gt;]</pre>
 </div>
 
 </div>
